...
  postScriptName: 'FontAwesome5Brands-Regular',
  fontFileName: 'FontAwesome5_Brands.ttf',
  fontStyle: fontStyle('400')
});
export type FontAwesome5BrandIconName = keyof typeof brandGM;
type Props =
  | ({ iconStyle: 'regular' } & ComponentProps<typeof RegularIcon>)
  | ({ iconStyle: 'solid' } & ComponentProps<typeof SolidIcon>)
  | ({ iconStyle: 'brand' } & ComponentProps<typeof BrandIcon>)
  | ({ iconStyle?: never } & ComponentProps<typeof RegularIcon>);

export const FontAwesome5 = (props: Props) => {
  const { iconStyle, name } = props;
  if (!iconStyle) {
    if (!glyphValidator(name, 'regular')) {
      console.warn(`noSuchGlyph: glyph ${String(name)} does not exist for 'regular' icon type for FontAwesome5`);
    }
    return <RegularIcon {...props} />;
...
